# DiscordIIko

./: .gitignore  Cargo.toml  LICENSE  README.md  Secrets.toml
src/: main.rs  web_scraper.rs
src/commands/: mod.rs  novel.rs
src/extras/: mod.rs  web_scraper.rs
