[package]
name = "discord_iiko"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.29.0"
anyhow = "1.0.70"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-serenity = "0.29.0"
shuttle-secrets = "0.29.0"
tokio = "1.32.0"
tracing = "0.1.37"
reqwest = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
scraper = "0.15.0"
